# simple-backups

./: .mailmap  README.md  pyproject.toml  run.py
simple_backups/: outputs.py  schedules.py  simple_backup.py  sources.py
