[tool.poetry]
name = "simple-backups"
version = "1.3.1"
description = "A simple yet expandable backup script"
authors = ["Joshua Coales <joshua@coales.co.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
schedule = "^1.1.0"
google-cloud-storage = "^1.39.0"
simple-heartbeat = "^0.1.2"
paramiko = "^2.7.2"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
